--- a/public/conf.yml
+++ b/public/conf.yml
@@ -29,14 +29,14 @@ sections:
         id: 0_1166_rss
     displayData:
       rows: 1
-      cols: 2
+      cols: 1
       collapsed: false
   - name: Memory Usage
     icon: fas fa-memory
     widgets:
       - type: gl-current-mem
         options:
-          hostname: http://1.117.9.226:33777
+          hostname: http://dashy.uwbanner.cn/
         id: 0_1166_glcurrentmem
 
   - name: 服务器相关
@@ -81,7 +81,7 @@ sections:
     widgets:
       - type: gl-current-cpu
         options:
-          hostname: http://1.117.9.226:33777
+          hostname: http://dashy.uwbanner.cn/
         id: 0_765_glcurrentcpu
   - name: CPU History
     icon: fas fa-microchip
@@ -90,7 +90,7 @@ sections:
     widgets:
       - type: gl-cpu-history
         options:
-          hostname: http://1.117.9.226:33777
+          hostname: http://dashy.uwbanner.cn/
           limit: 600
         id: 0_1018_glcpuhistory
   - name: System Alerts
@@ -98,20 +98,21 @@ sections:
     widgets:
       - type: gl-alerts
         options:
-          hostname: http://1.117.9.226:33777
+          hostname: http://dashy.uwbanner.cn/
         id: 0_1296_glalerts
   - name: Network Interfaces
     icon: fas fa-ethernet
     widgets:
       - type: gl-network-interfaces
         options:
-          hostname: http://1.117.9.226:33777
+          hostname: http://dashy.uwbanner.cn/
           limit: 3
         id: 0_1806_glnetworkinterfaces
     displayData:
       sortBy: most-used
       rows: 1
       cols: 1
+      limit: 3
       collapsed: false
       hideForGuests: false
 
@@ -120,7 +121,7 @@ sections:
     widgets:
       - type: gl-disk-io
         options:
-          hostname: http://1.117.9.226:33777
+          hostname: http://dashy.uwbanner.cn/
           
         id: 0_579_gldiskio
     displayData:
